# fathom

./: .gitignore  LICENSE  README.md  fathom.toml.example  pyproject.toml
fathom/: __init__.py  __main__.py  backtest.py  cli.py  collect.py  config.py
fathom/adapters/: base.py  paper.py  solana_rpc.py
fathom/adapters/helius/: feed.py
fathom/adapters/jupiter/: adapter.py
fathom/adapters/pumpfun/: graduation.py
fathom/adapters/pumpswap/: adapter.py
fathom/core/: __init__.py  engine.py  events.py  metrics.py  orders.py  risk.py  strategy.py  telemetry.py
fathom/data/: __init__.py
fathom/strategies/: __init__.py  composite.py  graduation_sniper.py  log_only.py  mean_reversion.py  volume_breakout.py
src/: __init__.py
src/adapters/pumpfun/: graduation.py
src/adapters/pumpswap/: adapter.py
src/core/: events.py
src/strategies/: momentum.py
tests/: test_events.py  test_graduation_sniper.py  test_pumpswap.py
