[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fathom-trading"
version = "0.1.0"
description = "High-performance Solana DEX trading engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "latebuild" },
]
keywords = ["solana", "trading", "dex", "jupiter", "defi", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp>=3.9",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.urls]
Repository = "https://github.com/late-build/fathom"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
